checking scopes
